package ru.x0xdc.otus.java.atm.model;

public enum Status {
    SUCCESS,
    FAILED
}
